--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,18 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    margin: 20px;
+}
+
+.results {
+    margin-bottom: 10px;
+}
+
+.calculator {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 10% auto 10%;
 }
 
 .numbers {
@@ -18,4 +29,5 @@ body {
 
 .footer {
     margin-top: auto;
+    margin-bottom: 0;
 }
