--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,11 @@ body {
     flex-direction: column;
     align-items: center;
     margin: 20px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+a {
+    text-decoration: none;
 }
 
 .results {
