--- a/styles.css
+++ b/styles.css
@@ -4,14 +4,29 @@ body {
     align-items: center;
     margin: 20px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #E9FAE3;
 }
 
 a {
     text-decoration: none;
 }
 
+h2 {
+    margin-left: auto;
+    margin-right : 0;
+    padding: 10px;
+    color: #AC92A6;
+}
+
 .results {
+    display: flex;
+    justify-content: right;
+    align-items: center;
     margin-bottom: 10px;
+    border: 2px solid #D5C7BC;
+    height: 40px;
+    width: 300px;
+    background-color: #DEE8D5;
 }
 
 .calculator {
@@ -19,6 +34,10 @@ a {
     flex-direction: column;
     align-items: center;
     margin: 10% auto 10%;
+}
+
+.pad {
+    display: flex;
 }
 
 .numbers {
@@ -30,6 +49,25 @@ a {
 .numberBtn {
     height: 75px;
     width: 75px;
+    background-color: #DEE8D5;
+    border: 2px solid #D5C7BC;
+    color: #AC92A6;
+    font-weight: 700;
+}
+
+.operations {
+    display: grid;
+    gap: 3px;
+    margin-left: 10px;
+}
+
+.operationBtn {
+    height: 50px;
+    width: 50px;
+    border: 2px solid #D5C7BC;
+    background-color: #DEE8D5;
+    color: #AC92A6;
+    font-weight: 700;
 }
 
 .footer {
