--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@ body {
 
 a {
     text-decoration: none;
+    color: black;
 }
 
 h2 {
@@ -38,6 +39,7 @@ h2 {
 
 .pad {
     display: flex;
+    align-items: center;
 }
 
 .numbers {
@@ -46,7 +48,7 @@ h2 {
     gap: 3px;
 }
 
-.numberBtn {
+.btn-num {
     height: 75px;
     width: 75px;
     background-color: #DEE8D5;
@@ -61,7 +63,7 @@ h2 {
     margin-left: 10px;
 }
 
-.operationBtn {
+.btn-op {
     height: 50px;
     width: 50px;
     border: 2px solid #D5C7BC;
